# cat_dog

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/cat_dog/: fit_model.py  parameters.py
